--- a/static/elfinder.html
+++ b/static/elfinder.html
@@ -124,6 +124,7 @@
 				$('#elfinder').elfinder({
 					url : '/file-connector'  // connector URL (REQUIRED)
 					   , lang: 'zh_CN'                    // language (OPTIONAL)
+                       , requestType: "post"
 				});
 			});
 		</script>
