--- a/static/elfinder.html
+++ b/static/elfinder.html
@@ -125,7 +125,10 @@
 					url : '/file-connector'  // connector URL (REQUIRED)
 					   , lang: 'zh_CN'                    // language (OPTIONAL)
                        , requestType: "post"
-				});
+                       , rememberLastDir     : false
+                       , useBrowserHistory   : false
+
+                });
 			});
 		</script>
 	</head>
